# BBCnews_summarizer

./: docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/summarizer/: main.py
backend/src/summarizer/api/: api.py
backend/src/summarizer/application/: app.py  config.json
backend/src/summarizer/parser/: parser.py
backend/src/summarizer/schemas/: api_schemas.py
backend/src/summarizer/script/: summ.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py
train_model/: pyproject.toml
train_model/src/: metrics.py  model.py  news_dataset_loader.py  train.py
